docs/_sass/minima/_layout.scss
/* top navigation bar*/
.navbar-nav{
	top: 0;
	left: 0;
	width: 100%;
	height: 70px;
	position: fixed; //stay fixed to top
	overflow-x: hidden;
	padding-top: 10px;
	padding-bottom: 10px;
	z-index:1; //appear on top of everything else
}

.navbar{
	top: 0;
	left: 0;
	height: 70px;
	width: 100%;
	position: fixed;
	overflow-x: hidden;
	padding-top: 10px;
	padding-bottom: 10px;
	z-index:1;
}


/* Navigation Bar list item */
.navbar-nav > li{
  padding-left:30px;
  padding-right:30px;
  margin-left:-10px;
	margin-right:-10px;
}

/* Sidenav menu for dev journey */
.sidenav {
	height: 100%;
	width: 15%;
	position: fixed; //stay fixed to left side
	top: 0;
	left: 0;
	background-color: $b9-yellow;
	overflow-x: hidden; /* disable horizontal scroll */
	padding-top: 70px; /* place sidenav contents 60px from the top */
}

.sidenav a {
	font-size: 14px;
	line-height: 1;
}

/* Defaults */
.container {
	max-width: $content-width;
	margin: 0 auto;
}
main {
	padding: 0 15px;
	max-width: $content-width;
	margin: 0 auto;
}
body {
	margin: 70px;
	color: $main;
	font-family: $font-style;
	font-size: 1.1em;
	line-height: 1.6;
	-webkit-font-smoothing: antialiased;
}
footer {
	text-align: center;
	padding: 40px;
}

/* Headings  */
h1,h2,h3 {
	font-weight: 600;
	color: $main;
	font-family: $heading-font;
	line-height: 1.5;
}
h1 {
	font-size: 2.5em;
	a {
    text-decoration: none;
    color: $main;
  }
	a:visited {
		text-decoration: none;
		color: $link-clicked;
	}
}
h2 {
	font-size: 2em;
}

/* Hyperlinks */
a:link {
  color: $main;
  text-decoration: none;
  font-weight: bold;
}
a:visited {
	color: $main;
	text-decoration: underline;
	font-weight: bold;
}
a:hover {
	color: $link-hover;
	text-decoration: underline;
}

/* Image Captions  */
figcaption {
  color: $caption;
  caption-side: top;
  text-align: left;
}

